2013-12-12  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a definition of exec_prefix to rivet-buildplugin.

	* Adding -DNDEBUG to the default non-debug build flags.

2013-11-27  Andy Buckley  <andy.buckley@cern.ch>

	* Removing accidentally still-present no-as-needed linker flag from rivet-config.

	* Lots of analysis clean-up and migration to use new features and W/Z finder APIs.

	* More momentum method forwarding on ParticleBase and adding
	abseta(), absrap() etc. functions.

	* Adding the DEFAULT_RIVET_ANA_CONSTRUCTOR cosmetic macro.

	* Adding deltaRap() etc. function variations

	* Adding no-decay photon clustering option to WFinder and ZFinder,
	and replacing opaque bool args with enums.

	* Adding an option for ignoring photons from hadron/tau decays in LeptonClusters.

2013-11-22  Andy Buckley  <andy.buckley@cern.ch>

	* Adding Particle::fromBottom/Charm/Tau() members. LHCb were
	aready mocking this up, so it seemed sensible to add it to the
	interface as a more popular (and even less dangerous) version of
	hasAncestor().

	* Adding an empty() member to the JetAlg interface.

2013-11-07  Andy Buckley  <andy.buckley@cern.ch>

	* Adding the GSL lib path to the library path in the env scripts
	and the rivet-config --ldflags output.

2013-10-25  Andy Buckley  <andy.buckley@cern.ch>

	* 2.0.0 release!!!!!!

2013-10-24  Andy Buckley  <andy.buckley@cern.ch>

	* Supporting zsh completion via bash completion compatibility.

2013-10-22  Andy Buckley  <andy.buckley@cern.ch>

	* Updating the manual to describe YODA rather than AIDA and the new rivet-cmphistos script.

	* bin/make-plots: Adding paths to error messages in histogram combination.

	* CDF_2005_S6217184: fixes to low stats errors and final scatter plot binning.

2013-10-21  Andy Buckley  <andy.buckley@cern.ch>

	* Several small fixes in jet shape analyses, SFM_1984, etc. found
	in the last H++ validation run.

2013-10-18  Andy Buckley  <andy.buckley@cern.ch>
